--- a/Mispollos/html/generatedPasswordEmail.html
+++ b/Mispollos/html/generatedPasswordEmail.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet" />
     <style>
         .t01 a {
             text-decoration: none !important;
@@ -46,7 +46,7 @@
                                    class="table-container" bgcolor="#ffffff">
                                 <tr>
                                     <td align="center" valing="middle">
-                                        <img src="https://lh3.googleusercontent.com/fife/AAWUweVAvJxm-S3EYolQ1hYkmFc98ClYg4iHd2BlsQDqcYqjNtF4OHCgKocjmoO7BzGx8SQ0KK9dwcM3fAu0Yxp-vWpqc3NgEFI0cSkbGdfdT5wADZ4xZ9SvqvJk7qEsenRgt7xHyAq1yyie9mn9j21fo1zNPnB945GSG41jCqCaZUajvi0PIWnTT7-LdjgtjkCy40jI-QLMYrrg02mFSdz-_MNPQzqhOqZ39hMD1wyWR432r25WEPsTkSBS4ryErY0HDHtcqD4n3UHiQFEDqO5bMy6Yu_0O4wfpOdrrgGX4tHsKFop7f_DR4Fi2H_Rgi8FefwrU65OkRamfIcjeXCGj1_gBGXrByjKLW5sOW_ve5_CJn0fsfldo4eyjYe1-bxGhi4xpjfuXSGCzAVjBQKjyKOmL1TSzFmJDrgPFs6Cbhu0LnT1e6Qs0DTFNS0nzSCobGx1NBCoX-yVoXnepiP8tEvB5CQb-gQbYP8QlnVvQ8bH9iiULggwhrYKsvxJ4JwpwboYfyOEgeOcTfWQerD6URgcP_1nKzogrIfWv6HDeelP6pMbqKtXqURCN4DzAgeZuPQMcUVZaN01DISCDF_mUddzb77_NFppUV2mbF7oqALNw0U2-Ub6nQ1VKeop9krVgRU3WxeMD2qZa866cLin8fLb4-1wDbgMQ-ELOqBYooZeMlINxbm4gkLsqYOV64eMXM6Hb_-Z-SYTBLsKfLpLeM33HqFkNq1Dhak8=w1284-h947-ft" alt="">
+                                        <img src="https://lh3.googleusercontent.com/fife/AAWUweVAvJxm-S3EYolQ1hYkmFc98ClYg4iHd2BlsQDqcYqjNtF4OHCgKocjmoO7BzGx8SQ0KK9dwcM3fAu0Yxp-vWpqc3NgEFI0cSkbGdfdT5wADZ4xZ9SvqvJk7qEsenRgt7xHyAq1yyie9mn9j21fo1zNPnB945GSG41jCqCaZUajvi0PIWnTT7-LdjgtjkCy40jI-QLMYrrg02mFSdz-_MNPQzqhOqZ39hMD1wyWR432r25WEPsTkSBS4ryErY0HDHtcqD4n3UHiQFEDqO5bMy6Yu_0O4wfpOdrrgGX4tHsKFop7f_DR4Fi2H_Rgi8FefwrU65OkRamfIcjeXCGj1_gBGXrByjKLW5sOW_ve5_CJn0fsfldo4eyjYe1-bxGhi4xpjfuXSGCzAVjBQKjyKOmL1TSzFmJDrgPFs6Cbhu0LnT1e6Qs0DTFNS0nzSCobGx1NBCoX-yVoXnepiP8tEvB5CQb-gQbYP8QlnVvQ8bH9iiULggwhrYKsvxJ4JwpwboYfyOEgeOcTfWQerD6URgcP_1nKzogrIfWv6HDeelP6pMbqKtXqURCN4DzAgeZuPQMcUVZaN01DISCDF_mUddzb77_NFppUV2mbF7oqALNw0U2-Ub6nQ1VKeop9krVgRU3WxeMD2qZa866cLin8fLb4-1wDbgMQ-ELOqBYooZeMlINxbm4gkLsqYOV64eMXM6Hb_-Z-SYTBLsKfLpLeM33HqFkNq1Dhak8=w1284-h947-ft" alt="" />
                                     </td>
                                 </tr>
                                 <tr>
@@ -101,18 +101,11 @@
                                                         <tr>
                                                             <td align="center" valing="middle"
                                                                 style="font-family: 'Roboto', sans-serif;font-size: 18px;font-weight: 400;color: #333333;">
-                                                                <a href="">
-                                                                    <img src="https://lh3.googleusercontent.com/fife/AAWUweUyqHSzXkpTfsvE1dE8aOqDZqHuTes-0Qa8-RcQpykRzaAfWDWXVmyPzZUKNudTsfHEcvuFkYkuaymx3IgNjM-sS0LBT5_pjLWKqH3hdNYAqOVrND0gtImTpMlC69H9Py74jfIpugY_Wfz8WIzc0i56kOetrfycMlLttLVr7VFT9xBohUfc4Ui4qKuY1ehtuFsIOQ3ZV3x9BvUmKTlhsHtdO74IClDlbsBFoW9AqjpmQmYGFfZRcT1cB37lrMwEfiAN9tGIgO5x_g2CkSbNcjnF00qaRlNM1l3XR53TnJn0Df-abPsKuh70Hj3V6offxtumZiFAU4gVW1eP_YgC55DyvZ_9KPgeUJTUvWcDXL9mssXxPlQ_1QGs8wVl3I0ubliIyyhEa9xXv_PtCFh8JB-zuK3x-jMZDVer_STUimyASBeUlrfiviYbZEQZh7OzMC6RksWLSjityv-Cg2m6kxdMoWlyqpzavxNA0OqPdOs4-P6xsZN-EulJQ0I0_HNmOQy9JWMdbagVZKM5wp1VvlukN_nPTJrXMy5V_KBLLyPOi5k8yyPC8AH-_QpnrL-z1alnqsoDu4seVHKe6RVbSWB5jMapCuC1mQEgtAlRYqeL0Br27GqU_zllcqiZKoEizYSiA9ABxHa4PTmn5Bfts9UkEqYBUdrOBAq33YieQ52ix14X5dspBJz1Wrq6VkaBACrPYT4cfR1zUsxcvvlkyGOpR4ZAw_AZ5QY=w1284-h947-ft" alt="">
+                                                                <a href="http://localhost:4200/recuperar-clave/{{TOKEN}}" target="_blank">
+                                                                    <img src="https://lh3.googleusercontent.com/fife/AAWUweUyqHSzXkpTfsvE1dE8aOqDZqHuTes-0Qa8-RcQpykRzaAfWDWXVmyPzZUKNudTsfHEcvuFkYkuaymx3IgNjM-sS0LBT5_pjLWKqH3hdNYAqOVrND0gtImTpMlC69H9Py74jfIpugY_Wfz8WIzc0i56kOetrfycMlLttLVr7VFT9xBohUfc4Ui4qKuY1ehtuFsIOQ3ZV3x9BvUmKTlhsHtdO74IClDlbsBFoW9AqjpmQmYGFfZRcT1cB37lrMwEfiAN9tGIgO5x_g2CkSbNcjnF00qaRlNM1l3XR53TnJn0Df-abPsKuh70Hj3V6offxtumZiFAU4gVW1eP_YgC55DyvZ_9KPgeUJTUvWcDXL9mssXxPlQ_1QGs8wVl3I0ubliIyyhEa9xXv_PtCFh8JB-zuK3x-jMZDVer_STUimyASBeUlrfiviYbZEQZh7OzMC6RksWLSjityv-Cg2m6kxdMoWlyqpzavxNA0OqPdOs4-P6xsZN-EulJQ0I0_HNmOQy9JWMdbagVZKM5wp1VvlukN_nPTJrXMy5V_KBLLyPOi5k8yyPC8AH-_QpnrL-z1alnqsoDu4seVHKe6RVbSWB5jMapCuC1mQEgtAlRYqeL0Br27GqU_zllcqiZKoEizYSiA9ABxHa4PTmn5Bfts9UkEqYBUdrOBAq33YieQ52ix14X5dspBJz1Wrq6VkaBACrPYT4cfR1zUsxcvvlkyGOpR4ZAw_AZ5QY=w1284-h947-ft" alt="" />
                                                                 </a>
                                                             </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td align="center" valing="middle"
-                                                                style="font-family: 'Roboto', sans-serif;font-size: 18px;font-weight: 400;color: #333333;">
-                                                                Tu nombre de usuario es <strong>{{EMAIL}}</strong> <br>
-                                                                Tu contraseña es <strong>{{PASSWORD}}</strong>
-                                                            </td>
-                                                        </tr>
+                                                        </tr>                                                        
                                                         <tr>
                                                             <!-- SPACE -->
                                                             <td align="center" valing="middle" height="50">
@@ -127,6 +120,7 @@
                                             </tr>
                                         </table>
                                     </td>
+                                </tr>
                             </table>
                         </td>
                     </tr>
